# contract-chat

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: api.proto  api.rs
src/: chat_contract.rs  lib.rs
