[package]
name = "chat"
version = "0.1.0"
authors = ["Andrew Low <andrew.low@berkeley.edu>"]
build = "build.rs"

[lib]
name = "chat"
crate-type = ["staticlib"]

[dependencies]
chat-api = { path = "./api" }
ekiden-core-common = { path = "./ekiden/core/common" }
ekiden-core-trusted = { path = "./ekiden/core/trusted" }
protobuf = "1.4.3"

[build-dependencies]
ekiden-tools = { path = "./ekiden/tools" }
ekiden-core-edl = { path = "./ekiden/core/edl" }

